force-app/main/default/objects/NPN_Competency_Permissions_Group_Map__c/NPN_Competency_Permissions_Group_Map__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>NPN Competency Permissions and Group Map</label>
</CustomObject>