force-app/main/default/objects/NPN_Competency_Permissions_Group_Map__c/fields/Permissions_and_Group__c.field-meta.xml
<CustomField>
    <fullName>Permissions_and_Group__c</fullName>
    <label>Permissions and Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>