force-app/main/default/objects/NPN_Competency_Permissions_Group_Map__c/fields/Sub_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Program_Type__c</fullName>
    <label>Sub Program Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>