force-app/main/default/objects/NPN_Competency_Permissions_Group_Map__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program_Type__c</columns>
    <columns>Sub_Program_Type__c</columns>
    <columns>Competency__c</columns>
    <columns>Program_Level__c</columns>
    <columns>Role__c</columns>
    <columns>Permissions_and_Group__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>