force-app/main/default/objects/NPN_Competency_Permissions_Group_Map__c/listViews/NPN_Compliance.listView-meta.xml
<ListView>
    <fullName>NPN_Compliance</fullName>
    <columns>NAME</columns>
    <columns>Program_Type__c</columns>
    <columns>Sub_Program_Type__c</columns>
    <columns>Competency__c</columns>
    <columns>Program_Level__c</columns>
    <columns>Role__c</columns>
    <columns>Permissions_and_Group__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permissions_and_Group__c</field>
        <operation>contains</operation>
        <value>Renewal</value>
    </filters>
    <label>NPN Compliance</label>
    <language>en_US</language>
</ListView>